# cleytin_jng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.cpp
main/commons/: default_explosion.cpp  default_meteor.cpp  enemy_laser_beam.cpp  enemy_ship.cpp  main_laser_beam.cpp  main_ship.cpp
main/fase_1/: fase1.cpp  jng.cpp
main/fase_2/: enemy_dialog.cpp  enemy_ship.cpp  fase2.cpp
main/fase_3/: fase3.cpp  mothership.cpp
main/include/: audios.h  default_explosion.h  default_meteor.h  enemy_dialog.h  enemy_laser_beam.h  enemy_ship.h  fase1.h  fase2.h  fase3.h  jng.h  main_laser_beam.h  main_ship.h  mothership.h  sprites.h  tela_final.h  tela_inicial.h
main/tela_final/: tela_final.cpp
main/tela_inicial/: tela_inicial.cpp
