idf_component_register(SRCS
                            "main.cpp"
                            "fase_1/fase1.cpp"
                            "fase_2/fase2.cpp"
                            "fase_3/fase3.cpp"
                            "commons/main_ship.cpp"
                            "commons/main_laser_beam.cpp"
                            "commons/enemy_laser_beam.cpp"
                            "commons/default_meteor.cpp"
                            "commons/enemy_ship.cpp"
                            "commons/enemy_dialog.cpp"
                            "commons/default_explosion.cpp"
                            "fase_3/mothership.cpp"
                            "tela_final/tela_final.cpp"
                            "tela_inicial/tela_inicial.cpp"
                    INCLUDE_DIRS "include")
